tests/pos/simpleSetter.scala
object Test {
  var name: String = "foo"
  name = name + "123"
}
