tests/neg/i22721/test1.scala
package example

private def foobar: String = "foo"
object test1 { def x = foobar }
